--- a/Microservices/sender_user_management/src/main/resources/application.yml
+++ b/Microservices/sender_user_management/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
     datasource:
       driverClassName: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://sql7.freemysqlhosting.net:3306/sql7286654?useSSL=false
-      username: sql7286654
-      password: kEHSJI4qvt
+      url: jdbc:mysql://104.155.181.216:3306/user_sender_management_db?useSSL=false
+      username: microservices
+      password: iUber
     jpa:
       hibernate.ddl-auto: update
       generate-ddl: true
