--- a/DLivr/package.json
+++ b/DLivr/package.json
@@ -36,6 +36,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
+    "ionic4-rating": "^1.0.9",
     "pwa": "1.9.7",
     "rxjs": "~6.3.3",
     "web": "0.0.2",
